# supersnake

./: .gitignore  Cargo.toml  build.py  config.json
src/: bmp.rs  config.rs  main.rs
src/display/: mod.rs  screen.rs  sound.rs
src/game/: cell.rs  mod.rs  snake.rs
