[package]
name = "supersnake"
version = "0.28.69"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
minifb = "0.25.0"
rand = "0.8.5"
itertools = "0.11.0"
bmp = "0.5.0"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
